--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Istanbul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Enisecurity # the main title
+title: n3c1's CyberSec Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Security Writeups and Blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Cyber Security Writeups and Personal Blog
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -98,7 +98,7 @@ theme_mode: dark
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/164575682?s=400&u=17641067e26911624618201aaa7d6615eea674b4&v=4
+avatar: https://avatars.githubusercontent.com/u/164575682?s=400&u=ddb9fc3acb2654510af1fcf44f7126dd01091b13&v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://enisecur1ty.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
