--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Europe/Istanbul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: n3c1's CyberSec Blog # the main title
+title: n3c1's Security Blog # the main title
 
 tagline: Security Writeups and Blog # it will display as the subtitle
 
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://enisecur1ty.github.io"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
